# speaker_project

./: .gitignore  Cargo.toml
src/: args.rs  device.rs  main.rs  midi.rs  play.rs  util.rs
synthesizer/: synthesizer.ino
