[package]
name = "speaker_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["io-util", "rt-multi-thread", "io-util", "time", "macros", "fs", "io-std", "sync"]}
tokio-serial = "5"
midly = "0.5"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
